--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>prueba git</title>
+    <link rel="stylesheet" href="css/estilo.css" type="text/css">
 </head>
 <body>
     <h1>Hola mundo</h1>
